# attendance-management-actix-web-demo

./: Cargo.toml  docker-compose.yml
sql/: init.sql
src/: error.rs  lib.rs
src/api/web/: handlers.rs
src/domain/attendance/: types.rs
src/io/database/: attendance.rs
src/workflows/: clock_in.rs  mod.rs
