[package]
name = "attendance-management-actix-web-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-rt = "2"
chrono = { version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"]}
thiserror = "2.0"
tokio =  { version = "1", features = ["full"]}
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"]}

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"]}